# FaceWinUnlock-Tauri

./: README.md
Server/src/: CPipeListener.rs  CSampleCredential.rs  lib.rs
UI/: README.md
UI/src/: App.vue
UI/src-tauri/: Cargo.toml  tauri.conf.json
UI/src-tauri/capabilities/: default.json
UI/src-tauri/nsis/: hooks.nsh
UI/src-tauri/src/: lib.rs  main.rs  proc.rs
UI/src-tauri/src/modules/: faces.rs  init.rs
UI/src-tauri/src/utils/: api.rs
UI/src/components/: AccountAuthForm.vue
UI/src/views/: Options.vue
UI/src/views/Faces/: Add.vue
Unlock/: Cargo.toml  README.md  管道测试.txt
Unlock/src/: face.rs  global.rs  main.rs  pipe.rs  proc.rs  thread.rs  utils.rs
