[package]
name = "Unlock"
version = "0.1.0"
edition = "2024"

[dependencies]
r2d2_sqlite = { version = "0.24.0", features = ["bundled"] }
r2d2 = "0.8"
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
opencv = "0.98.0"
log = "0.4.29"
simplelog = "0.12.2"
uuid = { version = "1.19.0" , features = ["v4"] }

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
    "Win32_System_IO",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_Variant",
    "Win32_System_Shutdown",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
    "Win32_System_WindowsProgramming",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
]
